<resources>
    <string name="app_name">My Study Cards</string>
    <string name="build_your_own_flashcards">Build Your Own Flashcards</string>
    <string name="create">Create</string>
    <string name="select_study_mode">Select Study Mode</string>
    <string name="only_flashcard">Only Flashcard</string>
    <string name="flashcard_n_amp_nmultiple_choice"><![CDATA[Flashcard\n&\nMultiple Choice]]></string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="contacts">Contacts</string>
    <string name="create_flashcards">Create Flashcards</string>
    <string name="select_type">Select Type</string>
    <string name="muiltiple_choice">Muiltiple Choice</string>
    <string name="select_deck">Select Deck</string>
    <string name="insert_question">Insert Question</string>
    <string name="insert_correct_answer">Insert Correct Answer</string>
    <string name="insert_incorrect_choice">Insert Incorrect Choice</string>
    <string name="start_study_mode">Start Study Mode</string>
    <string name="no_flashcards_in_this_deck">No Flashcards in this Deck</string>
    <string name="answer">Answer</string>
    <string name="question">Question?</string>
    <string name="i_didn_t_knew_that">I didn\'t knew that!</string>
    <string name="i_knew_that">I knew that!</string>
    <string name="_0">0</string>
    <string name="all">All</string>
    <string name="deck_1">Deck 1</string>
    <string name="deck_2">Deck 2</string>
    <string name="deck_3">Deck 3</string>
    <string name="no_flashcards_in_the_deck">No Flashcards in the Deck</string>
    <string name="to_add_a_new_card">to ADD a new card</string>
    <string name="to_edit_a_card">to EDIT a card</string>
    <string name="use_the_icon">Use the icon</string>
    <string name="to_delete_a_card">to DELETE a card</string>
    <string name="navigate_through_cards_using">Navigate through cards using</string>
    <string name="when_ready_to_study_click_the_button">When ready to study click the button</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="background_story">Background Story</string>
    <string name="this_application_was_generated_as_the_artefact_of_a_master_s_dissertation_completed_by_agata_lopes_a_computer_science_student_at_glyndwr_university_in_wrexham_uk">This application was generated as the artefact of a master\'s dissertation completed by Agata Lopes, a Computer Science student at Glyndwr University in Wrexham, UK.</string>
    <string name="my_study_cards_is_a_memorisation_tool_that_help_its_users_to_develop_their_memory_skills_this_flexible_application_allows_its_users_to_create_their_personalised_flashcards_and_study_them_in_two_different_modes">My study cards is a memorisation tool that help its users to develop their memory skills. This flexible application allows its users to create their personalised flashcards and study them in two different modes.</string>
    <string name="the_purpose_of_this_app_is_to_provide_users_with_a_friendly_and_welcoming_environment_where_study_flashcards_can_be_created_and_studied_as_needed_without_relying_on_competition_as_other_applications_do">The purpose of this app is to provide users with a friendly and welcoming environment, where study flashcards can be created and studied as needed, without relying on competition as other applications do.</string>
    <string name="in_the_end_just_like_a_traditional_flashcard_this_application_can_be_used_by_anyone_who_want_to_retain_knowledge_the_subjects_of_the_flashcards_can_be_anything_from_a_new_language_to_learn_or_a_series_of_specific_history_events_to_memorise_its_usage_will_be_limited_by_the_imagination_and_necessity_of_the_user">In the end, just like a traditional flashcard, this application can be used by anyone who want to retain knowledge. The subjects of the flashcards can be anything from a new language to learn or a series of specific history events to memorise, its usage will be limited by the imagination and necessity of the user.</string>
    <string name="send_us_your_sugestions">Send us your sugestions</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message_sugestions">Message / Sugestions</string>
    <string name="send">Send</string>
</resources>
