<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/app_bg"
    tools:context=".ContactsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_us_your_sugestions"
        android:fontFamily="@font/bangers"
        android:textSize="28sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        android:singleLine="true"
        android:textColorHint="#9C9C27B0"
        android:textColor="#fff"
        android:textSize="14sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="20dp"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColorHint="#9C9C27B0"
        android:textColor="#fff"
        android:textSize="14sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        android:textColorHint="#9C9C27B0"
        android:textColor="#fff"
        android:singleLine="true"
        android:textSize="14sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:text="@string/message_sugestions"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:height="180dp"
        android:gravity="top"
        android:textColorHint="#9C9C27B0"
        android:textColor="#fff"
        android:inputType="textMultiLine"
        android:textSize="14sp" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_btn"
        android:text="@string/send"
        android:textAllCaps="true"
        android:textSize="13sp" />
</LinearLayout>